<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_voter"/>

        <TextView
            android:id="@+id/tv_a_vote"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:text="@string/a_vote"/>

        <TextView
            android:id="@+id/tv_indication_a_vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/veuillez_deconnecter" />


    </LinearLayout>

        <Button
            android:id="@+id/bt_se_deconnecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="18dp"
            android:textColor="@color/blanc"
            android:background="@drawable/bt_bleu"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/retour_accueil" />


</RelativeLayout>
